# shorten

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  release.sh  run.sh  test.py
.github/workflows/: build.yml  ghcr.yml
docs/: README.md
migrations/: 20230319081322_database.sql  urls.sql
src/: main.rs
