[package]
name = "tinyurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
